# vudo

./: .gitignore  01-VUDO-OS-VISION.md  02-DOL-2.0-SPECIFICATION.md  03-THREE-YEAR-ROADMAP.md  04-CLAUDE-FLOW-YEAR1-SWARM.md  README.md  SUPPORT.md  claude-flow-vudo-y1.yaml  cli_specs.md
biological_principles/: mycelial_networks.md
docs/: DEV_FLOW.md  HyphalNetwork.md  MILESTONES.md  MilestoneTracker.tsx  PHASE2-COMPLETE.md  README-MILESTONES.md  README.md  REVIEW_NEXT_2026-01-02.md  VUDO-ASSESSMENT-ROADMAP.md  manifest-guide.md  platform-overview.md  registry-guide.md  signing-guide.md  spirit-runtime-guide.md
docs/spec/compose/: higher-order.spec.md  lambda.spec.md  operators.spec.md
docs/spec/control/: loops.spec.md  matching.spec.md
docs/spec/meta/: eval.spec.md  reflect.spec.md
docs/spec/research/: type-system-analysis.md
docs/spec/types/: types.test.spec.md
ontology/prospective/: validate-v0.3.0.sh
ontology/prospective/spirits/genes/: manifest.dol
ontology/prospective/spirits/systems/: registry.dol
ontology/prospective/vudo-vm/genes/: capability.dol  sandbox.dol
ontology/prospective/vudo-vm/traits/: execution.dol
spec/compose/: pipe.spec.dol
spec/control/: conditionals.spec.dol  expressions.spec.dol
spec/meta/: macro.spec.dol  quote.spec.dol
spec/types/: aliases.spec.dol  composites.spec.dol  ontology.spec.dol  primitives.spec.dol
spirits/thermodynamic/: Cargo.toml  manifest.toml
spirits/thermodynamic/dol/: energy-flow.dol  eroei.dol  small_world.dol
spirits/thermodynamic/src/: eroei.rs  lib.rs  small_world.rs  wasm.rs
vudo/: Cargo.toml
vudo/spirit_runtime/: Cargo.toml
vudo/spirit_runtime/src/: dependency.rs  lib.rs  manifest.rs  pricing.rs  signature.rs  version.rs
vudo/spirit_runtime/src/registry/: local.rs  mod.rs  search.rs  traits.rs  types.rs
vudo/vudo_cli/: Cargo.toml
vudo/vudo_cli/src/: config.rs  main.rs
vudo/vudo_cli/src/commands/: build.rs  check.rs  doc.rs  dol.rs  fmt.rs  info.rs  install.rs  list.rs  mod.rs  new.rs  pack.rs  publish.rs  run.rs  search.rs  sign.rs  summon.rs  test.rs  uninstall.rs  upgrade.rs
vudo/vudo_cli/tests/: e2e_spirit_lifecycle.rs
vudo/vudo_repl/: Cargo.toml  IMPLEMENTATION.md
vudo/vudo_repl/src/: commands.rs  environment.rs  lib.rs  printer.rs  repl.rs
vudo/vudo_vm/: Cargo.toml
vudo/vudo_vm/examples/spirits/: counter.wat  echo.wat  hello_world.wat
vudo/vudo_vm/src/: capability.rs  fuel.rs  lib.rs  limits.rs  linker.rs  sandbox.rs
vudo/vudo_vm/src/host/: credit.rs  log.rs  mod.rs  network.rs  random.rs  storage.rs  time.rs
vudo/vudo_vm/tests/: integration_tests.rs  spirit_tests.rs
vudo_vm/: Cargo.toml
vudo_vm/spirit_runtime/: Cargo.toml
vudo_vm/vudo_vm/src/: capability.rs  error.rs  fuel.rs  lib.rs  sandbox.rs
vudo_vm/vudo_vm/src/host/: log.rs  mod.rs  random.rs  storage.rs  time.rs
