[workspace]
members = ["vudo_vm", "spirit_runtime", "vudo_cli", "vudo_repl"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wasmtime = "27"
ed25519-dalek = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
toml = "0.8"
sha2 = "0.10"
serde-big-array = "0.5"
clap = { version = "4", features = ["derive"] }
rustyline = "14"
colored = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
hex = "0.4"
rand = "0.8"
dirs = "5"
