[workspace]
members = ["vudo_vm", "spirit_runtime", "vudo_cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wasmtime = "27"
ed25519-dalek = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
toml = "0.8"
