[package]
name = "thermodynamic"
version = "0.1.0"
edition = "2021"
description = "EROEI and Small-World calculators for thermodynamic economics"
authors = ["Univrs.io Team"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "thermo"
path = "src/bin/thermo.rs"

[dependencies]
wasm-bindgen = "0.2"
libm = "0.2"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"
lto = true
