[package]
name = "spirit_runtime"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
dirs.workspace = true
ed25519-dalek = { workspace = true, features = ["rand_core"] }
rand.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile = "3"
