[package]
name = "vudo_vm"
version.workspace = true
edition.workspace = true

[dependencies]
wasmtime.workspace = true
ed25519-dalek.workspace = true
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
sha2.workspace = true
serde-big-array.workspace = true
getrandom = "0.2"

[dev-dependencies]
wat = "1.243"
